--- a/.travis.yml
+++ b/.travis.yml
@@ -17,3 +17,4 @@ script:
   - npx jest -u --coverage
 after_script:
   - ./cc-test-report after-build --exit-code $TRAVIS_TEST_RESULT
+  - COVERALLS_REPO_TOKEN=$coveralls_repo_token npm run coveralls
