--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "start": "webpack-dev-server --open --hot --port 3000 --mode development",
     "build": "webpack --mode production",
     "heroku-prebuild": "npm i",
-    "heroku-postbuild": "npm run build"
+    "heroku-postbuild": "npm run build",
+    "coverage": "react-scripts test --env=jsdom --coverage",
+    "coveralls": "cat ./coverage/lcov.info | node node_modules/.bin/coveralls"
   },
   "repository": {
     "type": "git",
@@ -22,6 +24,7 @@
   "homepage": "https://github.com/Manorlds-Eaglespark/iReportReactRedux#readme",
   "dependencies": {
     "axios": "^0.19.0",
+    "coveralls": "^3.0.5",
     "dotenv-webpack": "^1.7.0",
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.14.0",
